correctly working scheduler